# rotiv

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  LICENSE  PLAN_PHASE2.md  PLAN_PHASE3.md  PLAN_PHASE4.md  PLAN_PHASE6.md  PLAN_PHASE7.md  PROMPT.md  README.md  install.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.cargo/: config.toml
.claude/: settings.json
.github/workflows/: ci.yml  npm-publish.yml  release.yml
changelog/: phase6.md  phase7.md
crates/rotiv-cli/: Cargo.toml
crates/rotiv-cli/src/: cli.rs  error.rs  main.rs
crates/rotiv-cli/src/commands/: add.rs  build.rs  context.rs  deploy.rs  dev.rs  diff_impact.rs  explain.rs  info.rs  migrate.rs  mod.rs  new.rs  spec_sync.rs  validate.rs
crates/rotiv-cli/src/knowledge/: action.md  context.md  deploy.md  loader.md  middleware.md  migrate.md  models.md  modules.md  routes.md  signals.md
crates/rotiv-cli/src/modules/auth/: module.json
crates/rotiv-cli/src/modules/file-uploads/: index.ts  module.json
crates/rotiv-cli/src/modules/sessions/: module.json
crates/rotiv-cli/src/output/: human.rs  json.rs  mod.rs
crates/rotiv-cli/src/templates/add/: model.ts  module_index.ts  module_manifest.json  module_test.ts  route.tsx
crates/rotiv-compiler/: Cargo.toml
crates/rotiv-core/: Cargo.toml
crates/rotiv-core/src/: analysis.rs  error.rs  lib.rs  models.rs  modules.rs  project.rs  proxy.rs  server.rs  watcher.rs  worker.rs
crates/rotiv-core/src/router/: discovery.rs  matcher.rs  mod.rs  registry.rs
crates/rotiv-orm/: Cargo.toml
docs/: DECISIONS.md  PLAN_PHASE1.md  PLAN_PHASE5.md  PLAN_V0.2.0.md  PLAN_V0.2.1.md  PLAN_V0.2.2.md  PLAN_V0.2.3.md  PROMPT.md  PROMPT_V0.2.0.md
docs/changelog/: phase1.md  phase2.md  phase3.md  phase4.md  phase5.md  v0.2.0.md  v0.2.1.md  v0.2.2.md  v0.2.3.md  v0.2.4.md  v0.2.5.md  v0.2.6.md
e2e-test-phase3/: README.md  package.json  tsconfig.json
e2e-test-phase4/: package.json
e2e-test-phase4/.rotiv/: spec.json
e2e-test-phase5/: package.json
e2e-test-phase5/.rotiv/: spec.json
e2e-test-phase6/: tsconfig.json
e2e-tests/e2e-test-phase3/: tsconfig.json
e2e-tests/e2e-test-phase4/: drizzle.config.ts
e2e-tests/e2e-test-phase5/: tsconfig.json
e2e-tests/e2e-test-phase6/: package.json
feedback/v0.1.0/: experience-report.md  (+3 more)
(+60 files in other folders)
