[workspace]
resolver = "2"
members = [
    "crates/rotiv-cli",
    "crates/rotiv-core",
    "crates/rotiv-orm",
    "crates/rotiv-compiler",
]

[workspace.package]
version = "0.2.6"
edition = "2021"
authors = ["Rotiv Contributors"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
notify = { version = "7" }
notify-debouncer-mini = { version = "0.5" }
reqwest = { version = "0.12", features = ["json"] }
