[package]
name = "rotiv-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
reqwest = { workspace = true }

[dependencies.rotiv-orm]
path = "../rotiv-orm"

[dev-dependencies]
tempfile = "3"
